# remote-cinema-be

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1ec0411f249a_changed_hashed_fields_from_bcrypt_to_str.py  5e93a158466c_initial_project_migrations.py  7acbed8be593_add_a_default_field_to_the_plan_model.py  a14803347d1d_update_the_expires_at_timestamp.py  ae077ef5305e_add_model_for_storing_refresh_tokens.py  b57f8a28d498_add_a_field_for_storing_raw_code_for_.py  de26ae9e7ef2_initail_migrations.py
app/core/: config.py  database.py
app/models/: base.py
src/: main.py  manage.py
src/api/v1/: routers.py
src/api/v1/endpoints/: auth_endpoints.py
src/config/: database.py  settings.py
src/models/: __init__.py
src/models/plans/: plans.py
src/models/users/: auth.py
src/schemas/users/: auth_schemas.py
src/services/helpers/: dependencies.py  email_service.py  hash_management.py
src/services/helpers/templates/emails/: base.html  otp.html  password_reset.html  welcome.html
src/services/users/: auth_service.py  jwt_service.py  otp_service.py  user_service.py
