[project]
name = "remote-cinema-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiopg>=1.4.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.135.3",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.12.1",
    "python-jose[cryptography]>=3.5.0",
    "sib-api-v3-sdk>=7.6.0",
    "slowapi>=0.1.9",
    "sqlalchemy[async]",
    "uvicorn>=0.44.0",
]
